# SFML-linux

./: CMakeLists.txt  run.sh
include/: Image.h
src/: Image.cpp  main.cpp
